# enemy_rebuilt

./: LICENSE  README.md  fractal_noise_script.py  pyproject.toml  topo_detail_script.py  voronoi_skeletonization.py  wfrp_empire_phys_geo.ipynb  wfrp_empire_rework.ipynb  wfrp_support_sheet.xlsx
base_jpegs/: wfrp_empire_rework.ipynb
base_vectors/: wfrp_empire_geo_control.gpkg  wfrp_empire_lakes_high_res_poly.gpkg  wfrp_empire_sea_high_res_poly.gpkg
logs/: topo.py
src/pyworldsim/: __init__.py  core.py  generation.py  logger.py  misc_utils.py  noise_tools.py  terrain_engine.py
src/world_simulator/: __init__.py  hydro.py  hydro_topo.py  layers.py  misc_utils.py  phys_geo.py  terrain_engine.py  topo.py
