[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "world_simulator"
version = "0.1.0"
description = "A geospatial toolkit for converting river polygons to centerlines on the WFRP world."
authors = [
  { name="Your Name", email="your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "geopandas",
    "shapely",
    "centerline",
    "scipy",
    "tqdm",
    "matplotlib",
    "momepy",
    "networkx",
    "noise",
    "rasterio"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/wfrp_rivers"