[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyworldsim"
version = "0.2.0"
description = "A geospatial toolkit for worldbuilding"
authors = [
  { name="Your Name", email="jacobsson@o2.pl" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "geopandas",
    "shapely",
    "centerline",
    "scipy",
    "tqdm",
    "matplotlib",
    "momepy",
    "networkx",
    "noise",
    "rasterio"
]

[project.urls]
"Homepage" = "https://github.com/pete-jacobsson/enemy_rebuilt"